fix tiny overflow cards

--- a/alegrify-ui.css
+++ b/alegrify-ui.css
@@ -331,19 +331,19 @@
 .alegrify-card__header {
   background-color: #333333;
   margin-top: -17px;
-  margin-right: -17px;
+  margin-right: -16px;
   margin-left: -17px;
   padding: 16px;
   position: relative;
 }
 [dir="rtl"] .alegrify-card__header,
 :host-context([dir="rtl"]) .alegrify-card__header {
-  margin-left: -17px;
+  margin-left: -16px;
   margin-right: -17px;
 }
 [dir="ltr"] .alegrify-card__header,
 :host-context([dir="ltr"]) .alegrify-card__header {
-  margin-right: -17px;
+  margin-right: -16px;
   margin-left: -17px;
 }
 .alegrify-card__header--background-image {
@@ -387,7 +387,7 @@
   margin-bottom: 0;
 }
 .alegrify-card__footer {
-  margin-right: -17px;
+  margin-right: -16px;
   margin-left: -17px;
   margin-bottom: -17px;
   padding: 16px;
@@ -395,12 +395,12 @@
 }
 [dir="rtl"] .alegrify-card__footer,
 :host-context([dir="rtl"]) .alegrify-card__footer {
-  margin-left: -17px;
+  margin-left: -16px;
   margin-right: -17px;
 }
 [dir="ltr"] .alegrify-card__footer,
 :host-context([dir="ltr"]) .alegrify-card__footer {
-  margin-right: -17px;
+  margin-right: -16px;
   margin-left: -17px;
 }
 @media screen and (min-width: 600px) {
